// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RunInterface #flush is delegated on the queue 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      42,
    ],
  ],
}
`;

exports[`RunInterface #postResults posts the results sequentially 1`] = `
[MockFunction post] {
  "calls": Array [
    Array [
      "xpid",
      "runid",
      0,
      0,
      Object {
        "measures": Object {
          "val": "val1",
        },
        "token": "token",
      },
    ],
  ],
}
`;

exports[`RunInterface #postResults posts the results sequentially 2`] = `
[MockFunction post] {
  "calls": Array [
    Array [
      "xpid",
      "runid",
      0,
      0,
      Object {
        "measures": Object {
          "val": "val1",
        },
        "token": "token",
      },
    ],
    Array [
      "xpid",
      "runid",
      0,
      1,
      Object {
        "measures": Object {
          "val": "val2",
        },
        "token": "token",
      },
    ],
  ],
}
`;

exports[`RunInterface #postResults posts the results sequentially 3`] = `
[MockFunction post] {
  "calls": Array [
    Array [
      "xpid",
      "runid",
      0,
      0,
      Object {
        "measures": Object {
          "val": "val1",
        },
        "token": "token",
      },
    ],
    Array [
      "xpid",
      "runid",
      0,
      1,
      Object {
        "measures": Object {
          "val": "val2",
        },
        "token": "token",
      },
    ],
    Array [
      "xpid",
      "runid",
      1,
      0,
      Object {
        "measures": Object {
          "val": "val3",
        },
        "token": "token",
      },
    ],
  ],
}
`;

exports[`RunInterface #postResults properly posts the measures 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "xpid",
      "runid",
      0,
      0,
      Object {
        "measures": Object {
          "val": "val",
        },
        "token": "token",
      },
    ],
  ],
}
`;

exports[`checkExperimentAndImportIfNeeded checks for an experiment on the server and load it if it is not loaded 1`] = `
[MockFunction server#isExperimentLoadedOnServer] {
  "calls": Array [
    Array [
      "xp",
    ],
  ],
}
`;

exports[`checkExperimentAndImportIfNeeded checks for an experiment on the server and load it if it is not loaded 2`] = `[MockFunction server#importExperimentOnServer]`;

exports[`checkExperimentAndImportIfNeeded checks for an experiment on the server and load it if it is not loaded 3`] = `
[MockFunction server#importExperimentOnServer] {
  "calls": Array [
    Array [
      "http://host.path:1234/design.xml",
    ],
  ],
}
`;

exports[`checkExperimentAndImportIfNeeded fails without trying to import if it is not loaded and its design URI is not provided 1`] = `
[MockFunction server#isExperimentLoadedOnServer] {
  "calls": Array [
    Array [
      "xp",
    ],
  ],
}
`;

exports[`checkExperimentAndImportIfNeeded fails without trying to import if it is not loaded and its design URI is not provided 2`] = `[MockFunction server#importExperimentOnServer]`;

exports[`connectToRun properly locks, ask for run's plan and for run's current trial when no run is specified 1`] = `
[MockFunction server#lock] {
  "calls": Array [
    Array [
      "xpid",
      "runid",
    ],
  ],
}
`;

exports[`connectToRun properly locks, ask for run's plan and for run's current trial when no run is specified 2`] = `
[MockFunction server#plan] {
  "calls": Array [
    Array [
      "xpid",
      "runid",
    ],
  ],
}
`;

exports[`connectToRun properly locks, ask for run's plan and for run's current trial when no run is specified 3`] = `
[MockFunction server#currentTrial] {
  "calls": Array [
    Array [
      "xpid",
      "runid",
    ],
  ],
}
`;

exports[`selectRun asks for an available run if no run is provided 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "xpid",
    ],
  ],
}
`;

exports[`selectRun asks for the specified run if it is provided 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "xpid",
      "runid",
    ],
  ],
}
`;
